--- a/electron/index.html
+++ b/electron/index.html
@@ -12,4 +12,9 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+    html,body {
+        overflow: hidden;
+    }
+  </style>
 </html>
