--- a/index.html
+++ b/index.html
@@ -10,4 +10,16 @@
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
+  <style>
+    html,body {
+        overflow: hidden;
+    }
+    #app {
+      /* display: flex; */
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </html>
