--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </body>
   <style>
     html,body {
-        overflow: hidden;
+      overflow: hidden;
+      margin: 0
     }
     #app {
       /* display: flex; */
